# semantic-search

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: index.md  overview.md
docs/api/: endpoints.md
docs/design/: sitemap.md
docs/foundation/: goals.md  persona.md
docs/issues/: pdf-indexing-performance.md
docs/requirements/: features.md
docs/tech/: architecture.md  er-diagram.md  stack.md  virtualization-tradeoffs.md
scripts/: build-ui-on-change.sh  com.localdocsearch.api.plist  com.localdocsearch.watcher.plist  index.md  install-daemon.sh  start.sh  uninstall-daemon.sh
src/api/: file_opener.py  main.py
src/cli/: main.py
src/config/: logging.py  settings.py
src/constants/: __init__.py  media_types.py
src/embeddings/: ollama_embedding.py
src/indexer/: auto_indexer.py  document_indexer.py  file_watcher.py  hash_utils.py  task_queue.py
src/ocr/: vlm_client.py
src/processors/: audio_processor.py  chunker.py  image_metadata.py  image_processor.py  office_processor.py  pdf_processor.py  text_processor.py  video_processor.py  vlm_processor.py
src/search/: bm25_search.py  hybrid_search.py  reranker.py  rrf.py  vector_search.py
src/storage/: lancedb_client.py  models.py  schema.py  sqlite_client.py
tests/: test_api.py  test_chunker.py  test_document_indexer.py  test_file_watcher.py  test_hash_utils.py  test_hybrid_search.py  test_image_metadata.py  test_models.py  test_pdf_processor.py  test_processors_integration.py  test_repositories_integration.py  test_sqlite_client.py
ui/: package.json
(+40 files in other folders)
