[project]
name = "local-doc-search"
version = "0.1.0"
description = "Mac上の画像・PDF・動画・音声を自然言語で検索できるローカルAI検索システム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "lancedb>=0.15.0",

    # Document Processing
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",

    # Image Processing
    "pillow>=10.0.0",
    "reverse_geocoder>=1.5.1",

    # Audio/Video
    "mlx-whisper>=0.4.0",

    # ML/Embedding
    "ollama>=0.3.0",
    "numpy>=1.26.0",

    # File Watching
    "watchdog>=4.0.0",

    # OCR (Apple Vision wrapper)
    "pyobjc-framework-Vision>=10.0",

    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
local-doc-search = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
